// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
no error

======
ERROR: (space-before-function-paren) /src/tslint/space-before-function-paren/test.ts[1, 24]: Spaces before function parens are disallowed

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
export default function() {}

======
export default function () {}

>>>>>> after
"
`;
